--- a/styles/jasta.css
+++ b/styles/jasta.css
@@ -6,49 +6,49 @@
 .grid-item-4 img {
   position: absolute;
 }
-.SkyBlueHi {  /* skyblue */
+.SkyBlueSh {  /* skyblue */
   transform: rotate(-15deg);
   transition: ease 500ms;
   margin-left: -15%;
   margin-top: 8%;
   z-index: 8;
 }
-.BlueHi {  /* blue */
+.BlueSh {  /* blue */
   transform: rotate(-20deg);
   transition: ease 500ms;
   margin-top: 22%;
   margin-left: -35%;
   z-index: 7;
 }
-.GreenHi {  /* green */
+.GreenSh {  /* green */
   transform: rotate(14deg);
   transition: ease 500ms;
   margin-top: 8%;
   margin-left: 18%;
   z-index: 6;
 }
-.GreyHi {  /* grey left */
+.GreySh {  /* grey left */
   transform: rotate(-30deg);
   transition: ease 500ms;
   margin-top: 35%;
   margin-left: -50%;
   z-index: 6;
 }
-.SilverHi {  /* Silver Right*/
+.SilverSh {  /* Silver Right*/
   transform: rotate(22deg);
   transition: ease 500ms;
   margin-top: 20%;
   margin-left: 36%;
   z-index: 5;
 }
-.YellowHi {  /* Yellow Right*/
+.YellowSh {  /* Yellow Right*/
   transform: rotate(25deg);
   transition: ease 500ms;
   margin-top: 40%;
   margin-left: 54%;
   z-index: 4;
 }
-.RedHi {  /* red */
+.RedSh {  /* red */
   z-index: 9 !important;
   min-width: 100%;
 }
