--- a/styles/rectangles.css
+++ b/styles/rectangles.css
@@ -13,6 +13,15 @@
 	gap: 2rem;
 }
 .Rectangles .grid-box {
+	transform: translateY(80%);
+	opacity: 0;
+  transition: 500ms ease-in-out;
+}
+.Rectangles .grid-boxAnime {
+	transform: translateY(0%);
+	opacity: 1;
+}
+.Rectangles .grid-box {
 	display: flex;
 	flex-direction: column;
 	min-width: 19vw;
@@ -70,6 +79,14 @@
 .Rectangles .Seven {
   background-color: rgba(53,48,241,0.47);
 }
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 900px) {
 	.Rectangles .top {
 		flex-direction: column;
