--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,18 @@
+.Head {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.HeadBang {
+	position: absolute;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	height: 3rem;
+	width: 97%;
+	background-color: #FFFFFF;
+	transform: translateY(130%);
+}
 .Header {
   display: flex;
   position: fixed;
