--- a/styles/super.css
+++ b/styles/super.css
@@ -1,7 +1,7 @@
 /* grid container */
 .Super {
   display: grid;
-  margin: 6vw 12vw 0vw 12vw;
+  margin: 7vh 12vw 0vw 12vw;
   min-height: 32vh;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -10,7 +10,6 @@
   cursor: none;
   overflow-y: hidden;
   overflow-x: hidden;
-  z-index: 1;
 }
 .grid-item {
   outline: 0px solid green;
@@ -66,7 +65,6 @@
   display: flex;
   grid-column: 1 / 4;
   grid-row: 4 / 11;
-  z-index: 5;
   margin-top: auto;
   height: 75%;
 }
@@ -84,7 +82,6 @@
   display: flex;
   grid-column: 9 / 11;
   grid-row: 4 / 11;
-  z-index: 3;
   margin-top: auto;
   height: 75%;
 }
@@ -96,22 +93,21 @@
   transition: ease 1000ms;
   transform: translateX(0%);
   opacity: 1;
+  z-index:1;
 }
 .grid-item-4 {
   /* Jasta */
   grid-column: 5 / 8;
   grid-row: 4 / 11;
-  z-index: 1;
 }
 .grid-item-5 {     /* Ko Saath */
   display: flex;
+  z-index:1;
   grid-column: 2 / 10;
   grid-row: 7 / 11;
-  z-index: 2;
 }
 #animate {
   position: absolute;
   margin-top: 100px;
   font-size: 1rem;
-  z-index: 4;
 }
