--- a/styles/header.css
+++ b/styles/header.css
@@ -28,7 +28,7 @@
 .BlueLineInHead {
 	margin: 0 0 0 0;
 	width: 100%;
-	background-color: blue;
+	background-color: rgba(50, 118, 186, 0.9);
 	height: 0.5rem;
 }
 .BlueLineInHeadbelow {
