--- a/styles/jagdamba.css
+++ b/styles/jagdamba.css
@@ -8,7 +8,7 @@
 * {
 	box-sizing: border-box;
 	font-family: 'Helvetica', 'Arial', sans-serif;
-	cursor: pointer;
+	cursor:auto;
 }
 html, body {
 	margin: 0;
