middle of fixing rect boxes animations

--- a/styles/rectText.css
+++ b/styles/rectText.css
@@ -1,29 +1,29 @@
-.Rectangles .grid-box .pTex {
-  position: absolute;
-  text-align: center;
-  min-width: 70vw;
-  pointer-events: none;
-  padding: 2rem 3rem 2rem 3rem;
-  background-color: #000000;
-  font-size: 1.7vw;
-  font-weight: 500;
-  font-family: 'Open Sans', sans-serif;
-  color: #ffffff;
-  transform: translateY(-100%);
-  opacity: 0;
+.Rectangles .pTexts {
+	position:absolute;
+	margin:0 auto;
+	width:80vw;
 }
-.Rectangles .grid-box:focus .pTex {
-	position: absolute;
-	border-radius: 6x;
-  display: block;
-  max-width:70vw;
-  transform: translateY(30%);
-  opacity: 1;
-  transition: 1s ease;
-  z-index: 2;
+.pOne {
+	padding:1rem 2rem 2rem 2rem;
+	border-radius:10px;
+	font-weight:600;
+	background-color:#000000;
+	color:#FFFFFF;
+	text-align:center;
+	position:absolute;
+	left:0;
+	transform:translateY(-200%);
+	border:2px solid red;
+	height:5rem;
+	opacity:1;
+}
+.pOneSH {
+	opacity:1;
+	transform:translateY(0%);
+	border:2px solid orage;
 }
 @media only screen and (max-width: 600px) {
-	.Rectangles .grid-box:focus .pTex {
+	.pTexts:focus {
 	font-size: 2.7vw;
 	}
 }
