--- a/styles/header.css
+++ b/styles/header.css
@@ -33,7 +33,8 @@
 	height: 0.5rem;
 }
 .BlueLineInHeadbelow {
-  padding: 0.7rem 0 0.7rem 0;
+	font-size:2vw;
+  padding: 0.3rem 0 0.3rem 0;
 	display: flex;
 	justify-content: space-around;
 }
@@ -42,25 +43,25 @@
   outline: 0px solid red;
 }
 .Header nav {
-	display: flex;
-  font-size: 1.6vw;
-  color: #FFFFFF;
   margin-left: auto;
-  outline: 0px solid red;
+  outline: px solid red;
 }
 .Header nav ul {
-  display: flex;
-  gap: 1.7rem;
+	padding:0 0;
+  font-size: 1.6vw;
+  color: #FFFFFF;
   list-style: none;
-  outline: 0px solid orange;
+  outline: px solid orange;
 }
-.Header nav ul li i {
-	
+.Header nav ul li  {
+	text-shadow: 1px -1px 1px grey;
 }
 .Header nav ul li {
+	padding:0 0.5rem;
+	display:inline-block;
 	font-weight: 700;
 	height: 100%;
-	outline: 0px solid red;
+	outline: px solid red;
 }
 .Header nav ul li:after {
   display:block;
@@ -97,3 +98,51 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+@media only screen and (max-width: 700px) {
+		.Header {padding: 0 1rem 0 1rem;}
+		.Header img {margin: 1 1rem 1rem 1rem;}
+		.Head .Header nav {
+			position:absolute;
+			right:2rem;
+			top:1rem;
+			flex-direction:column;
+			background-color: rgba(50, 118, 186, 0.9);
+			box-shadow: 0px 0px 4px;
+			border-radius:5px;
+			padding:0 0.5rem 0 0.5rem;
+			}
+		
+		.Header nav ul {
+				display: flex;
+  			flex-direction: column;
+  			gap:1rem;
+  			font-size:1rem;
+  			padding:0 0;
+			}
+  		.Header nav ul .home {
+				display:none;
+  			
+			}
+  		.Header nav ul li {
+  			text-shadow: 1px -1px 2px grey;
+  		}
+  		
+  	
+
+
+
+
+
+
+  		
+  		
+  		
+  		
+  		
+  		
+}
+
+
+
+
