--- a/styles/rectText.css
+++ b/styles/rectText.css
@@ -1,10 +1,5 @@
-.Rectangles .pTexts {
-	position:absolute;
-	margin:0 auto;
-	width:80vw;
-}
-.pOne {
-	padding:1rem 2rem 2rem 2rem;
+.pTex {
+	padding:1rem 2rem 1rem 2rem;
 	border-radius:10px;
 	font-weight:600;
 	background-color:#000000;
@@ -14,16 +9,16 @@
 	left:0;
 	transform:translateY(-200%);
 	border:2px solid red;
-	height:5rem;
-	opacity:1;
+	opacity:0;
 }
-.pOneSH {
+.pTexSH {
+  z-index:2;
 	opacity:1;
 	transform:translateY(0%);
 	border:2px solid orage;
 }
+
+
 @media only screen and (max-width: 600px) {
-	.pTexts:focus {
-	font-size: 2.7vw;
-	}
+	
 }
