--- a/styles/rectangles.css
+++ b/styles/rectangles.css
@@ -15,10 +15,10 @@
 .Rectangles .grid-box {
 	transform: translateY(80%);
 	opacity: 0;
-  transition: 500ms ease-in-out;
+  transition: 1000ms ease-in-out;
   box-shadow: 0px 0px 3px;
   border-radius: 5px;
-  	display: flex;
+  display: flex;
 	flex-direction: column;
 	min-width: 19vw;
 	max-width: 19vw;
@@ -29,6 +29,12 @@
 	text-align: center;
 	justify-content: space-between;
 	cursor:help;
+}
+.Rectangles .grid-box:focus .pTex {
+  z-index:2;
+	opacity:1;
+	transform:translateY(0%);
+	border:2px solid orage;
 }
 .Rectangles .grid-boxAnime {
 	transform: translateY(0%);
