--- a/styles/header.css
+++ b/styles/header.css
@@ -99,20 +99,31 @@ a {
   text-decoration: none;
 }
 
+/* @media only screen and (max-width: 700px) *//* @media only screen and (max-width: 700px) */
 @media only screen and (max-width: 700px) {
-		.Header {padding: 0 1rem 0 1rem;}
+		.Header {padding: 0.3rem 3rem 0.3rem 3rem;}
 		.Header img {margin: 1 1rem 1rem 1rem;}
 		.Head .Header nav {
 			position:absolute;
-			right:2rem;
-			top:1rem;
+			top:2rem;
+  		right:2.3rem;  
 			flex-direction:column;
 			background-color: rgba(50, 118, 186, 0.9);
 			box-shadow: 0px 0px 4px;
 			border-radius:5px;
-			padding:0 0.5rem 0 0.5rem;
+			display:none;
 			}
-		
+		#Menu {
+			position:absolute;
+			top:0.3rem;
+  		right:1.3rem;
+  		color:#FFFFFF;
+  		font-weight:600;
+  		padding:0.3rem 0.3rem 0rem 0.3rem;
+		 }
+		 #Menu:hover {
+		 	  color:#29fe71;
+		 	}
 		.Header nav ul {
 				display: flex;
   			flex-direction: column;
@@ -122,22 +133,10 @@ a {
 			}
   		.Header nav ul .home {
 				display:none;
-  			
 			}
   		.Header nav ul li {
   			text-shadow: 1px -1px 2px grey;
   		}
-  		
-  	
-
-
-
-
-
-
-  		
-  		
-  		
   		
   		
   		
